customized popup interactions and layout

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,4 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" value="5"></p>
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
+<div id="edit-todo-title-popup">
+    <h2>Edit your todo's title</h2>
+    <input id="title" placeholder="New todo" type="text" />
+</div>
