Created add todo functionality

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,4 +1,1 @@
-<div id="edit-todo-title-popup">
-    <h2>Edit your todo's title</h2>
-    <input id="title" placeholder="New todo" type="text" />
-</div>
+<input id="textbox" placeholder="Give your todo a title" type="text" />
