--- a/src/menu.html
+++ b/src/menu.html
@@ -1,4 +1,12 @@
 <section>
+    <div class="move-up-down-btns">
+        <button id="move-up-btn" class="move-up-down-btn">
+            Up
+        </button>
+        <button id="move-down-btn" class="move-up-down-btn">
+            Down
+        </button>
+    </div>
     <button id="move-out-btn">
         <svg class="icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 5.125C1 4.50368 1.50368 4 2.125 4H6.75V6.25H2.125C1.50368 6.25 1 5.74632 1 5.125Z" fill="#949494"/>
