--- a/src/ui.html
+++ b/src/ui.html
@@ -1,1 +1,2 @@
-<input id="textbox" placeholder="Give your todo a title" type="text" />
+
+<input id="textbox" placeholder="Give your todo a title..." type="text" />
