--- a/src/menu.html
+++ b/src/menu.html
@@ -1,5 +1,5 @@
 <section>
-    <button id="move-up-btn">
+    <!-- <button id="move-up-btn">
         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_106_19)">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -29,7 +29,7 @@
         </svg>
         Move down
     </button>
-    <hr/>
+    <hr/> -->
     <button id="move-out-btn">
         <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2 3C1.72386 3 1.5 3.22386 1.5 3.5C1.5 3.77614 1.72386 4 2 4L2 3ZM4.5 4L5 4V3H4.5V4ZM2 4L4.5 4V3L2 3L2 4Z"
